--- a/test/v2-migration-tests/pom.xml
+++ b/test/v2-migration-tests/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>software.amazon.awssdk</groupId>
         <artifactId>aws-sdk-java-pom</artifactId>
-        <version>2.26.16-SNAPSHOT</version>
+        <version>2.26.32-SNAPSHOT</version>
         <relativePath>../..</relativePath>
     </parent>
 
@@ -61,6 +61,12 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>s3</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>dynamodb</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
