Ignore updates for org.apache.maven:maven-plugin-api

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -56,3 +56,4 @@ updates:
       - dependency-name: "org.jacoco:jacoco-maven-plugin"
       - dependency-name: "org.apache.commons:commons-lang3"
       - dependency-name: "org.codehaus.plexus:plexus-utils"
+      - dependency-name: "org.apache.maven:maven-plugin-api"
