--- a/services/pom.xml
+++ b/services/pom.xml
@@ -406,6 +406,7 @@
         <module>apptest</module>
         <module>qapps</module>
         <module>ssmquicksetup</module>
+        <module>axdbfrontend</module>
     </modules>
     <description>The AWS Java SDK services</description>
     <url>https://aws.amazon.com/sdkforjava</url>
