--- a/aws-sdk-java/pom.xml
+++ b/aws-sdk-java/pom.xml
@@ -1973,6 +1973,11 @@ Amazon AutoScaling, etc).</description>
             <artifactId>ssmquicksetup</artifactId>
             <version>${awsjavasdk.version}</version>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>axdbfrontend</artifactId>
+            <version>${awsjavasdk.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${project.artifactId}-${project.version}</finalName>
