S3 Async Client - Multipart download (#5164)
Multipart Download for S3 Async Client release

--- a/services-custom/s3-transfer-manager/src/test/resources/log4j2.properties
+++ b/services-custom/s3-transfer-manager/src/test/resources/log4j2.properties
@@ -23,6 +23,12 @@ appender.console.layout.pattern = %d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %
 rootLogger.level = info
 rootLogger.appenderRef.stdout.ref = ConsoleAppender
 
+logger.split.name = software.amazon.awssdk.core.internal.async
+logger.split.level = trace
+
+logger.multi.name = software.amazon.awssdk.services.s3.internal.multipart
+logger.multi.level = trace
+
 # Uncomment below to enable more specific logging
 #
 #logger.sdk.name = software.amazon.awssdk
