--- a/v2-migration/src/main/resources/META-INF/rewrite/change-config-types.yml
+++ b/v2-migration/src/main/resources/META-INF/rewrite/change-config-types.yml
@@ -18,6 +18,7 @@
 type: specs.openrewrite.org/v1beta/recipe
 name: software.amazon.awssdk.v2migration.ChangeConfigTypes
 displayName: Change config related classes from v1 to v2
+description: Change config related classes from v1 to v2.
 recipeList:
   - org.openrewrite.java.ChangeMethodName:
       methodPattern: com.amazonaws.ClientConfiguration withRequestTimeout(int)
