--- a/v2-migration/src/main/resources/META-INF/rewrite/change-sdk-core-types.yml
+++ b/v2-migration/src/main/resources/META-INF/rewrite/change-sdk-core-types.yml
@@ -16,6 +16,7 @@
 type: specs.openrewrite.org/v1beta/recipe
 name: software.amazon.awssdk.v2migration.ChangeSdkCoreTypes
 displayName: Change SDK core types from v1 to v2
+description: Change SDK core types from v1 to v2.
 recipeList:
   - software.amazon.awssdk.v2migration.ChangeRegionTypes
   - software.amazon.awssdk.v2migration.ChangeAuthTypes
