Local integ testing

--- a/services-custom/s3-transfer-manager/src/test/resources/log4j2.properties
+++ b/services-custom/s3-transfer-manager/src/test/resources/log4j2.properties
@@ -23,19 +23,19 @@ appender.console.layout.pattern = %d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %
 rootLogger.level = info
 rootLogger.appenderRef.stdout.ref = ConsoleAppender
 
-logger.split.name = software.amazon.awssdk.core.internal.async
-logger.split.level = trace
+#logger.split.name = software.amazon.awssdk.core.internal.async
+#logger.split.level = trace
 
-logger.multi.name = software.amazon.awssdk.services.s3.internal.multipart
-logger.multi.level = trace
+#logger.multi.name = software.amazon.awssdk.services.s3.internal.multipart
+#logger.multi.level = trace
 
 # Uncomment below to enable more specific logging
 #
 #logger.sdk.name = software.amazon.awssdk
 #logger.sdk.level = debug
 #
-#logger.tm.name = software.amazon.awssdk.transfer.s3
-#logger.tm.level = info
+logger.tm.name = software.amazon.awssdk.transfer.s3
+logger.tm.level = info
 #
 #logger.request.name = software.amazon.awssdk.request
 #logger.request.level = debug
