Add codegen tests - customization config and generated classes

--- a/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/query/customization.config
+++ b/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/query/customization.config
@@ -27,5 +27,17 @@
       "methodName": "dummyRequestModifier",
       "className": "software.amazon.awssdk.codegen.internal.UtilsTest"
     }
+  },
+  "customSdkOperations": {
+    "operations":{
+      "PresignedCustomOperation":{
+        "name":"PresignedCustomOperation",
+        "input":{
+          "fqcn": "software.amazon.awssdk.codegen.poet.model.PresignedCustomOperation",
+          "marshallerFqcn": "software.amazon.awssdk.codegen.poet.model.PresignedCustomOperationRequestMarshaller"
+        },
+        "output":{"shape":"APostOperationWithOutputResponse"}
+      }
+    }
   }
 }
