--- a/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/rest-json/customization.config
+++ b/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/rest-json/customization.config
@@ -65,5 +65,17 @@
     "EventStream": ["EventOne", "event-two", "eventThree"]
   },
   "asyncClientDecoratorClass": true,
-  "syncClientDecoratorClass": true
+  "syncClientDecoratorClass": true,
+  "customSdkOperations": {
+    "operations":{
+      "PresignedCustomOperation":{
+        "name":"PresignedCustomOperation",
+        "input":{
+          "fqcn": "software.amazon.awssdk.codegen.poet.model.PresignedCustomOperation",
+          "marshallerFqcn": "software.amazon.awssdk.codegen.poet.model.PresignedCustomOperationRequestMarshaller"
+        },
+        "output":{"shape":"APostOperationWithOutputResponse"}
+      }
+    }
+  }
 }
