--- a/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/xml/customization.config
+++ b/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/xml/customization.config
@@ -2,5 +2,17 @@
     "authPolicyActions" : {
         "skip" : true
     },
-    "generateS3ExpressIdentityProvider" : "true"
+    "generateS3ExpressIdentityProvider" : "true",
+    "customSdkOperations": {
+      "operations":{
+        "PresignedCustomOperation":{
+          "name":"PresignedCustomOperation",
+          "input":{
+            "fqcn": "software.amazon.awssdk.codegen.poet.model.PresignedCustomOperation",
+            "marshallerFqcn": "software.amazon.awssdk.codegen.poet.model.PresignedCustomOperationRequestMarshaller"
+          },
+          "output":{"shape":"APostOperationWithOutputResponse"}
+        }
+      }
+    }
 }
