Add customization in S3 to keep expires as timestamp type

--- a/services/s3/src/main/resources/codegen-resources/customization.config
+++ b/services/s3/src/main/resources/codegen-resources/customization.config
@@ -1,4 +1,9 @@
 {
+  "shapeSubstitutions": {
+     "Expires": {
+         "emitAsType": "timestamp"
+     }
+  },
   "verifiedSimpleMethods": [
     "listBuckets"
   ],
@@ -23,24 +28,6 @@
         {
           "Size": {
             "emitAsType": "long"
-          }
-        }
-      ]
-    },
-    "PutObjectRequest": {
-      "modify": [
-        {
-          "Expires": {
-            "emitAsType": "timestamp"
-          }
-        }
-      ]
-    },
-    "WriteGetObjectResponseRequest": {
-      "modify": [
-        {
-          "Expires": {
-            "emitAsType": "timestamp"
           }
         }
       ]
@@ -89,15 +76,6 @@
         }
       ]
     },
-    "CreateMultipartUploadRequest": {
-      "modify": [
-        {
-          "Expires": {
-            "emitAsType": "timestamp"
-          }
-        }
-      ]
-    },
     "UploadPartRequest": {
       "inject": [
         {
@@ -138,11 +116,7 @@
           "Key": {
             "emitPropertyName": "DestinationKey",
             "existingNameDeprecated": true
-          },
-          "Expires": {
-            "emitAsType": "timestamp"
           }
-
         }
       ]
     },
