Add S3 customization and integ tests

--- a/services/s3/src/main/resources/codegen-resources/customization.config
+++ b/services/s3/src/main/resources/codegen-resources/customization.config
@@ -17,6 +17,26 @@
       }
     }
   },
+  "customSdkOperations": {
+    "operations":{
+      "PresignedDownload":{
+        "name":"PresignedDownload",
+        "http":{
+          "method":"GET",
+          "requestUri":"/"
+        },
+        "input":{
+          "fqcn": "software.amazon.awssdk.services.s3.model.PresignedDownloadRequest",
+          "marshallerFqcn": "software.amazon.awssdk.services.s3.transform.PresignedDownloadRequestMarshaller"
+        },
+        "output":{"shape":"GetObjectOutput"},
+        "errors":[
+          {"shape":"InvalidObjectState"}
+        ],
+        "documentation": "Non-modeled operation for downloading S3 object with pre-signed URL"
+      }
+    }
+  },
   "shapeModifiers": {
     "S3Object": {
       "modify": [
