--- a/v2-migration/pom.xml
+++ b/v2-migration/pom.xml
@@ -37,7 +37,6 @@
         <openrewrite.version>2.17.0</openrewrite.version>
         <junit.version>5.10.3</junit.version>
         <awssdkjavav1.version>1.12.472</awssdkjavav1.version>
-        <jacksondatabind.version>2.17.2</jacksondatabind.version>
     </properties>
 
     <dependencyManagement>
@@ -81,13 +80,6 @@
             <groupId>org.openrewrite.recipe</groupId>
             <artifactId>rewrite-java-dependencies</artifactId>
             <scope>runtime</scope>
-        </dependency>
-        <!--  We have to explicitly add jackson dependency to fix import issue
-         TODO: remove this once it's fixed. See JAVA-7848-->
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>${jacksondatabind.version}</version>
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
@@ -236,6 +228,16 @@
             <artifactId>test-utils</artifactId>
             <version>${awsjavasdk.version}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
