Enable compiled endpoint rules for DynamoDB

--- a/services/dynamodb/src/main/resources/codegen-resources/dynamodb/customization.config
+++ b/services/dynamodb/src/main/resources/codegen-resources/dynamodb/customization.config
@@ -34,5 +34,6 @@
     "listXssMatchSets"
   ],
   "customRetryStrategy" : "software.amazon.awssdk.services.dynamodb.DynamoDbRetryPolicy",
-  "enableEndpointDiscoveryMethodRequired": true
+  "enableEndpointDiscoveryMethodRequired": true,
+  "enableGenerateCompiledEndpointRules": true
 }
