Add exec output to maven logger
Easier to troublehshoot issues with the executable when issues arise.

--- a/archetypes/archetype-tools/pom.xml
+++ b/archetypes/archetype-tools/pom.xml
@@ -52,6 +52,7 @@
                         <configuration>
                             <executable>python</executable>
                             <commandlineArgs>${basedir}/src/main/resources/map-service-to-client-prefix</commandlineArgs>
+                            <useMavenLogger>true</useMavenLogger>
                         </configuration>
                     </execution>
                 </executions>
