Add additional testing
 - Codegen tests
 - Added tests for CBOR protocol exceptions

--- a/test/protocol-tests/pom.xml
+++ b/test/protocol-tests/pom.xml
@@ -49,6 +49,11 @@
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
+            <artifactId>aws-cbor-protocol</artifactId>
+            <version>${awsjavasdk.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
             <artifactId>aws-query-protocol</artifactId>
             <version>${awsjavasdk.version}</version>
         </dependency>
