--- a/test/protocol-tests/pom.xml
+++ b/test/protocol-tests/pom.xml
@@ -44,7 +44,17 @@
     <dependencies>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
+            <artifactId>third-party-jackson-dataformat-cbor</artifactId>
+            <version>${awsjavasdk.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
             <artifactId>aws-json-protocol</artifactId>
+            <version>${awsjavasdk.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>aws-cbor-protocol</artifactId>
             <version>${awsjavasdk.version}</version>
         </dependency>
         <dependency>
