Update value to path for operation context params

--- a/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/query/customization-with-duplicate-operationcontextparams.config
+++ b/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/query/customization-with-duplicate-operationcontextparams.config
@@ -4,7 +4,7 @@
       "operationName": "OperationWithOperationContextParam",
       "operationContextParamsMap": {
         "customEndpointArray": {
-          "value": "ListMember.StringList[*].LeafString"
+          "path": "ListMember.StringList[*].LeafString"
         }
       }
     }
