--- a/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/query/customization-with-incorrectName-operationcontextparams.config
+++ b/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/query/customization-with-incorrectName-operationcontextparams.config
@@ -4,7 +4,7 @@
       "operationName": "RandomOperationName",
       "operationContextParamsMap": {
         "customEndpointArray": {
-          "value": "ListMember.StringList[*].LeafString"
+          "path": "ListMember.StringList[*].LeafString"
         }
       }
     }
