--- a/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/query/customization.config
+++ b/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/query/customization.config
@@ -17,7 +17,7 @@
       "operationName": "OperationWithCustomizedOperationContextParam",
       "operationContextParamsMap": {
         "customEndpointArray": {
-          "value": "ListMember.StringList[*].LeafString"
+          "path": "ListMember.StringList[*].LeafString"
         }
       }
     }
