--- a/services/s3/src/main/resources/codegen-resources/customization.config
+++ b/services/s3/src/main/resources/codegen-resources/customization.config
@@ -344,7 +344,7 @@
       "operationName": "DeleteObjects",
       "operationContextParamsMap": {
         "DeleteObjectKeys": {
-          "value": "Delete.Objects[*].Key"
+          "path": "Delete.Objects[*].Key"
         }
       }
     }
