--- a/test/codegen-generated-classes-test/src/main/resources/codegen-resources/customresponsemetadata/customization.config
+++ b/test/codegen-generated-classes-test/src/main/resources/codegen-resources/customresponsemetadata/customization.config
@@ -35,7 +35,7 @@
         "operationName": "GetOperationWithMapEndpointParam",
         "operationContextParamsMap": {
           "Tables": {
-            "value" : "keys(MapOfStrings)"
+            "path" : "keys(MapOfStrings)"
           }
         }
       }
