--- a/test/codegen-generated-classes-test/src/main/resources/codegen-resources/endpointproviders/customization.config
+++ b/test/codegen-generated-classes-test/src/main/resources/codegen-resources/endpointproviders/customization.config
@@ -34,19 +34,19 @@
             "operationName": "NestedContainersOperation",
             "operationContextParamsMap": {
                 "PojoString": {
-                    "value": "Nested.StringMember"
+                    "path": "Nested.StringMember"
                 },
                 "BasicListOfString": {
-                    "value": "ListOfString"
+                    "path": "ListOfString"
                 },
                 "WildcardKeyListOfString": {
-                    "value": "Nested.ListOfNested[*].StringMember"
+                    "path": "Nested.ListOfNested[*].StringMember"
                 },
                 "KeysListOfString": {
-                    "value": "keys(PojoKeys)"
+                    "path": "keys(PojoKeys)"
                 },
                 "MissingRequestValuesListOfString": {
-                    "value": "Nested.ListOfString"
+                    "path": "Nested.ListOfString"
                 }
             }
         }
