bugfix : Load the CRC checksum from CRT using Class path loaders instead of direct reference of crt related classes

--- a/core/checksums/pom.xml
+++ b/core/checksums/pom.xml
@@ -55,7 +55,7 @@
             <groupId>software.amazon.awssdk.crt</groupId>
             <artifactId>aws-crt</artifactId>
             <version>${awscrt.version}</version>
-            <optional>true</optional>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
