Handled PR comments

--- a/test/crt-unavailable-tests/pom.xml
+++ b/test/crt-unavailable-tests/pom.xml
@@ -87,6 +87,11 @@
             <artifactId>log4j-slf4j-impl</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>checksums</artifactId>
+            <version>${awsjavasdk.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-
 </project>
