Update models for trebuchet feature https://trebuchet.corp.amazon.com/manage_feature.html?featureArn=arn:aws:trebuchet:::feature:v2:2a236723-7c96-48cd-8055-918b35a8308a revision 24

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -2173,6 +2173,11 @@
                 <artifactId>axdbfrontend</artifactId>
                 <version>${awsjavasdk.version}</version>
             </dependency>
+            <dependency>
+                <groupId>software.amazon.awssdk</groupId>
+                <artifactId>dsql</artifactId>
+                <version>${awsjavasdk.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
