--- a/aws-sdk-java/pom.xml
+++ b/aws-sdk-java/pom.xml
@@ -1978,6 +1978,11 @@ Amazon AutoScaling, etc).</description>
             <artifactId>axdbfrontend</artifactId>
             <version>${awsjavasdk.version}</version>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>dsql</artifactId>
+            <version>${awsjavasdk.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${project.artifactId}-${project.version}</finalName>
