Add codegen tests

--- a/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/query/customization-endpoint-know-prop.config
+++ b/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/query/customization-endpoint-know-prop.config
@@ -1,5 +1,12 @@
 {
   "endpointAuthSchemeConfig": {
     "knownEndpointProperties": "software.module.test.KNOWN_PROPS"
-  }
+  },
+    "endpointParameters": {
+      "ArnList": {
+            "required": false,
+            "documentation": "Parameter from the customization config",
+            "type": "StringArray"
+      }
+    }
 }
