--- a/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/query/customization.config
+++ b/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/query/customization.config
@@ -10,6 +10,11 @@
       "required": false,
       "documentation": "Parameter from the customization config",
       "type": "StringArray"
+    },
+    "ArnList": {
+          "required": false,
+          "documentation": "Parameter from the customization config",
+          "type": "StringArray"
     }
   },
   "customOperationContextParams": [
