--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
         <module>test/v2-migration-tests</module>
         <module>test/bundle-shading-tests</module>
         <module>test/crt-unavailable-tests</module>
+        <module>test/architecture-tests</module>
     </modules>
     <scm>
         <url>${scm.github.url}</url>
@@ -142,6 +143,7 @@
         <blockhound.version>1.0.8.RELEASE</blockhound.version>
         <jetty.version>9.4.45.v20220203</jetty.version>
         <bytebuddy.version>1.14.15</bytebuddy.version>
+        <archunit.version>1.3.0</archunit.version>
 
         <!-- build plugin dependencies-->
         <maven.surefire.version>3.1.2</maven.surefire.version>
