--- a/metric-publishers/pom.xml
+++ b/metric-publishers/pom.xml
@@ -26,6 +26,7 @@
 
     <modules>
         <module>cloudwatch-metric-publisher</module>
+        <module>emf-metric-publisher</module>
     </modules>
 
     <dependencyManagement>
