manually apply customization for db706923-b1ff-4db6-88a4-dba727033420

--- a/services/sesv2/src/main/resources/codegen-resources/customization.config
+++ b/services/sesv2/src/main/resources/codegen-resources/customization.config
@@ -1,5 +1,6 @@
 {
 
-    "enableGenerateCompiledEndpointRules": true
+    "enableGenerateCompiledEndpointRules": true,
+    "enableEndpointAuthSchemeParams": true
 
 }
