--- a/test/architecture-tests/pom.xml
+++ b/test/architecture-tests/pom.xml
@@ -193,6 +193,22 @@
                     <skip>true</skip>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven.surefire.version}</version>
+                <configuration>
+                    <argLine>-XX:MaxMetaspaceSize=1g -Xmx5120m</argLine>
+                    <forkCount>0</forkCount>
+                    <includes>
+                        <include>**/Test*.java</include>
+                        <include>**/*Tests.java</include>
+                        <include>**/*Test.java</include>
+                        <include>**/*TestCase.java</include>
+                    </includes>
+                    <skipTests>${skip.unit.tests}</skipTests>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
