--- a/metric-publishers/emf-metric-publisher/pom.xml
+++ b/metric-publishers/emf-metric-publisher/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>software.amazon.awssdk</groupId>
         <artifactId>metric-publishers</artifactId>
-        <version>2.29.32-SNAPSHOT</version>
+        <version>2.29.34-SNAPSHOT</version>
     </parent>
 
     <artifactId>emf-metric-publisher</artifactId>
@@ -36,6 +36,11 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>sdk-core</artifactId>
+            <version>${awsjavasdk.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>annotations</artifactId>
             <version>${awsjavasdk.version}</version>
         </dependency>
         <dependency>
