--- a/metric-publishers/emf-metric-publisher/pom.xml
+++ b/metric-publishers/emf-metric-publisher/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>software.amazon.awssdk</groupId>
         <artifactId>metric-publishers</artifactId>
-        <version>2.29.34-SNAPSHOT</version>
+        <version>2.29.35-SNAPSHOT</version>
     </parent>
 
     <artifactId>emf-metric-publisher</artifactId>
@@ -47,6 +47,12 @@
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>third-party-jackson-core</artifactId>
             <version>${awsjavasdk.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>json-utils</artifactId>
+            <version>2.29.35-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
